# password_manager

./: .gitignore  CMakeLists.txt  License.txt  README.md  WORK_STATUS.md  build.sh  main.cpp  poem.txt.enc  run.sh
data/: password.csv
include/: data_handler.hpp  enc_dec.hpp  file_handler.hpp  helper.hpp  helper_functions.hpp  input_validator.hpp  password_generator.hpp
include/gui/: test_window.hpp
src/: data_handler.cpp  enc_dec.cpp  file_handler.cpp  helper.cpp  helper_functions.cpp  input_validator.cpp  password_generator.cpp
src/core/: data_handler.cpp  enc_dec.cpp  file_handler.cpp  helper.cpp  password_generator.cpp
src/gui/: test_window.cpp  test_window.ui
tests/: data_handler.cpp  enc_dec.cpp  file_handler.cpp  helper.cpp  helper_functions.cpp  input_validator.cpp  password_generator.cpp  test.cpp
